change launch settings url for http to use http instead of https

--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -8,7 +8,7 @@
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:8051",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:8051/swagger"
+      "launchUrl": "http://localhost:8051/swagger"
     },
     "https": {
       "commandName": "Project",
