--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,21 @@
 bin/
 obj/
-.vs
-.env
-.vscode
+.vs/
+*.user
+*.suo
+wwwroot/dist/
+wwwroot/node_modules/
+wwwroot/css/app.css
+wwwroot/css/app.css.map
+*.dbmdl
+*.pdb
+*.cache
+*.log
+.DS_Store
+Thumbs.db
 appsettings.json
 appsettings.Development.json
-
+node_modules/
+.env
 GitHub-MCP.json
 mcp.json
