--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -13,12 +13,12 @@
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:8051/swagger",
+      "launchUrl": "scalar/v1",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:8051;http://localhost:8051"
+      "applicationUrl": "https://localhost:7087;http://localhost:5145"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
