--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -7,12 +7,12 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:8051",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "http://localhost:8051/swagger"
     },
     "https": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "https://localhost:8051/swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
