--- a/compose.yaml
+++ b/compose.yaml
@@ -6,9 +6,9 @@ services:
       dockerfile: API/Dockerfile
       args:
         BUILD_DATE: ${BUILD_DATE:-$(date -u +'%Y-%m-%dT%H:%M:%SZ')}
-    container_name: h2-api
+    container_name: h2-api-staging
     ports:
-      - "8051:8080"
+      - "9032:8080"
     env_file:
       - .env
     environment:
@@ -20,24 +20,24 @@ services:
       - h2-network
 
   # Blazor WASM App
-  blazor:
-    build:
-      context: .
-      dockerfile: Blazor/Dockerfile
-      args:
-        BUILD_DATE: ${BUILD_DATE:-$(date -u +'%Y-%m-%dT%H:%M:%SZ')}
-        VCS_REF: ${VCS_REF:-$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown')}
-    container_name: h2-blazor
-    ports:
-      - "8052:80"
-    env_file:
-      - .env
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-    depends_on:
-      - api
-    networks:
-      - h2-network
+#  blazor:
+#    build:
+#      context: .
+#      dockerfile: Blazor/Dockerfile
+#      args:
+#        BUILD_DATE: ${BUILD_DATE:-$(date -u +'%Y-%m-%dT%H:%M:%SZ')}
+#        VCS_REF: ${VCS_REF:-$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown')}
+#    container_name: h2-blazor
+#    ports:
+#      - "8052:80"
+#    env_file:
+#      - .env
+#    environment:
+#      - ASPNETCORE_ENVIRONMENT=Development
+#    depends_on:
+#      - api
+#    networks:
+#      - h2-network
 
 networks:
   h2-network:
