--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,7 @@ services:
       dockerfile: API/Dockerfile
       args:
         BUILD_DATE: ${BUILD_DATE:-$(date -u +'%Y-%m-%dT%H:%M:%SZ')}
-    container_name: h2-api-staging
+    container_name: h2-api-staging-kabdikhan
     ports:
       - "9032:8080"
     env_file:
